--- a/src/data/tasks.json
+++ b/src/data/tasks.json
@@ -18,7 +18,7 @@
         "created_at": "2022-09-11T12:34:42.124Z",
         "title": "Maecenas vel est vel turpis facilisis dictum",
         "content": "Curabitur posuere,\nest ac sagittis auctor, lacus quam laoreet elit, ac tincidunt nibh neque ac est. Cras elit ipsum, rhoncus non tristique at, ullamcorper a lacus. Ut semper, est non mollis aliquet, leo tellus lobortis sapien, id faucibus enim magna at mi.\nAliquam mollis in erat in rhoncus. Proin vehicula urna urna, quis gravida dolor cursus vel. Maecenas luctus vestibulum nulla et semper. Nam blandit, elit dictum ullamcorper lobortis, nunc enim venenatis felis, malesuada tincidunt neque libero ut velit. Cras commodo mollis lectus, a molestie eros auctor quis. Vivamus facilisis urna non nibh lobortis suscipit.",
-        "isUnread": false
+        "isUnread": true
       },
       {
         "id": 3,
@@ -49,7 +49,7 @@
         "created_at": "2022-09-11T12:34:42.124Z",
         "title": "Vestibulum ante ipsum primis",
         "content": "Duis ornare est a lorem faucibus dignissim.\nSed feugiat convallis risus eget fermentum. Sed at ipsum feugiat quam ultrices sodales in at nibh. Fusce at quam augue. Vivamus suscipit sem odio, facilisis gravida sapien consequat sit amet. Vestibulum orci nibh, maximus ut massa sed, viverra fringilla nisi. Etiam id mollis diam. Sed tristique varius metus laoreet dictum. Suspendisse rutrum malesuada nunc, eu pharetra velit venenatis in. Fusce vitae massa a est mattis ultricies id sit amet enim. Vivamus faucibus augue sed dictum accumsan. Pellentesque efficitur diam eget ligula ullamcorper, sed ornare ex tincidunt.",
-        "isUnread": false
+        "isUnread": true
       }
     ]
   },
